<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_own"
            android:icon="@mipmap/ic_dashboard"
            android:title="@string/nav_own" />
        <item
            android:id="@+id/nav_all"
            android:icon="@mipmap/ic_dashboard"
            android:title="@string/nav_all" />
        <item
            android:id="@+id/nav_video"
            android:icon="@mipmap/ic_event"
            android:title="@string/nav_video" />
        <item
            android:id="@+id/nav_music"
            android:icon="@mipmap/ic_headset"
            android:title="@string/nav_music" />
        <item
            android:id="@+id/nav_picture"
            android:icon="@mipmap/ic_headset"
            android:title="@string/nav_picture" />
        <item
            android:id="@+id/nav_doc"
            android:icon="@mipmap/ic_forum"
            android:title="@string/nav_doc" />
        <item
            android:id="@+id/nav_zip"
            android:icon="@mipmap/ic_forum"
            android:title="@string/nav_zip" />
        <item
            android:id="@+id/nav_apk"
            android:icon="@mipmap/ic_forum"
            android:title="@string/nav_apk" />
    </group>

</menu>
